/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }

    maven {
        url = uri('https://maven.google.com')
    }

    maven {
        url = uri('https://jitpack.io')
    }
}

dependencies {
    //spring boot and Jpa
    implementation 'org.springframework.boot:spring-boot-starter:2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.3'
    // 測試依賴
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
    testImplementation('org.junit.jupiter:junit-jupiter:5.7.2')
    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.2')
    //logback
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'ch.qos.logback:logback-core:1.2.3'
    //mysql
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    //swagger
    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
    //other
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation 'com.google.guava:guava:31.1-jre'
    //jar
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    // build.gradle
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}


group = 'org.example'
version = '1.0-SNAPSHOT'
description = 'WebCrawlerForIns'
java.sourceCompatibility = JavaVersion.VERSION_17
java.targetCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
test {
    useJUnitPlatform()
}
